--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "vue-component-compiler",
-  "version": "3.0.0",
+  "name": "shawwn-vue-component-compiler",
+  "version": "0.0.1",
   "description": "bundler agnostic API for compiling Vue SFC",
   "main": "src/index.js",
   "scripts": {
